--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
     "@ngrx/store-devtools": "^13.2.0",
     "@okta/okta-angular": "^5.2.0",
     "@okta/okta-auth-js": "^6.4.3",
+    "@types/jasmine": "^4.3.1",
+    "jasmine-core": "^4.5.0",
     "json-server": "^0.17.1",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "rxjs": "~7.5.0",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0",
