--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@okta/okta-angular": "^5.2.0",
     "@okta/okta-auth-js": "^6.4.3",
     "@types/jasmine": "^4.3.1",
+    "angular-in-memory-web-api": "^0.11.0",
     "jasmine-core": "^4.5.0",
     "json-server": "^0.17.1",
     "karma": "^6.4.1",
